--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root{
-    --cor-fundo: #87ff24 ;
-    --cor-principal: #00974c ;
-    --cor-secundaria: #bff1bb; 
+    --cor-fundo: #438ae7 ;
+    --cor-principal: #2711a1 ;
+    --cor-secundaria: #bbe0f1; 
     --cor-destaque: #ffee02;
     --cor-texto: #070707;
 
