--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --cor-fundo: #438ae7 ;
-    --cor-principal: #2711a1 ;
+    --cor-principal: #5e47e0 ;
     --cor-secundaria: #bbe0f1; 
     --cor-destaque: #ffee02;
     --cor-texto: #070707;
